k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foodfrenzy
  namespace: foodfrenzy-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: foodfrenzy
  template:
    metadata:
      labels:
        app: foodfrenzy
    spec:
      containers:
      - name: foodfrenzy
        image: itzboncar/food_frenzy:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 20
