k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: foodfrenzy-ns
spec:
  clusterIP: None   # headless service for StatefulSet discovery (optional) or remove for normal ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
